Last change: - Java downgrade to Java 8 version